--- a/RxMemo/ViewController/Base.lproj/Main.storyboard
+++ b/RxMemo/ViewController/Base.lproj/Main.storyboard
@@ -126,15 +126,84 @@
                     <view key="view" contentMode="scaleToFill" id="Bci-7l-nhG">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UPQ-rD-SMZ">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem systemItem="trash" id="96V-rn-JJe">
+                                        <color key="tintColor" systemColor="systemRedColor"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="e2b-nO-JOU"/>
+                                    <barButtonItem systemItem="compose" id="Ne4-Yu-Lpg"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="eNm-bV-UZv"/>
+                                    <barButtonItem systemItem="action" id="xHU-5B-Bmc"/>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ivz-cj-dWg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentCell" textLabel="tlx-xE-6Gz" style="IBUITableViewCellStyleDefault" id="0cd-G8-WyD">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0cd-G8-WyD" id="6Du-wC-B7E">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tlx-xE-6Gz">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" textLabel="AEv-Ga-shd" style="IBUITableViewCellStyleDefault" id="LhK-qm-VK2">
+                                        <rect key="frame" x="0.0" y="88.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LhK-qm-VK2" id="srn-WT-oGt">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="AEv-Ga-shd">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="fEB-DD-ohR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ivz-cj-dWg" firstAttribute="leading" secondItem="fEB-DD-ohR" secondAttribute="leading" id="4wu-XV-OCP"/>
+                            <constraint firstItem="Ivz-cj-dWg" firstAttribute="top" secondItem="Bci-7l-nhG" secondAttribute="top" id="6qc-DM-8Fz"/>
+                            <constraint firstItem="Ivz-cj-dWg" firstAttribute="trailing" secondItem="fEB-DD-ohR" secondAttribute="trailing" id="BFF-57-ld7"/>
+                            <constraint firstItem="UPQ-rD-SMZ" firstAttribute="bottom" secondItem="fEB-DD-ohR" secondAttribute="bottom" id="DWe-bi-vfM"/>
+                            <constraint firstItem="UPQ-rD-SMZ" firstAttribute="trailing" secondItem="fEB-DD-ohR" secondAttribute="trailing" id="OiJ-3J-Cnc"/>
+                            <constraint firstItem="UPQ-rD-SMZ" firstAttribute="leading" secondItem="fEB-DD-ohR" secondAttribute="leading" id="dNt-F8-wrl"/>
+                            <constraint firstItem="UPQ-rD-SMZ" firstAttribute="top" secondItem="Ivz-cj-dWg" secondAttribute="bottom" id="dlF-yi-aoA"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="메모 보기" id="QJL-MD-atf"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="deleteButton" destination="96V-rn-JJe" id="wfT-JX-Kfw"/>
+                        <outlet property="editButton" destination="Ne4-Yu-Lpg" id="NwN-3d-RAb"/>
+                        <outlet property="listTableView" destination="Ivz-cj-dWg" id="Z3I-FC-obf"/>
+                        <outlet property="shareButton" destination="xHU-5B-Bmc" id="iAr-8m-HOW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZx-X1-gVu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2399" y="783"/>
+            <point key="canvasLocation" x="2398.5507246376815" y="782.8125"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LPI-cj-gUi">
@@ -179,6 +248,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
